DOM_JIRA/activity/ClassWork/style.css
*{
    box-sizing: border-box;
}
body{
    margin:0px;
}
/* generic  */
.lightpink{
    background-color: lightpink;
}
.lightblue{
    background-color: lightblue;
}
.lightgreen{
    background-color: lightgreen;
}
.black{
    background-color: black;
}

/* toolbar*********************************************/
.toolbar{
    height: 12vh;
    background-color: #444;
    display: flex;
    align-items: center;
    gap : 6rem;
    padding-left:4rem;
}
.toolbar>*{
    border-radius: 4px;
}
.filter-container{
    height:70%;
    width:20%;
    background-color: rgb(85, 82, 82);
    /* border:1px solid red; */
    /* margin-left:4rem; */
    /* margin-right:6rem */
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.filter-colors__container{
    height:100%;
    width:25%;
    /* background-color: red; */
    border-radius: 0.2rem;
    display: flex;
    justify-content: center;
    align-items: center;
}
.filter-color{
    height:30%;
    width:50%;
    border-radius:2px;
}
.action-container{
    height:70%;
    width:10%;
    background-color: rgb(146, 102, 35);
    display: flex;
}
.action-container__icons{
    height:100%;
    width:50%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.fas{
    font-size:x-large;
}

.action-container__icons:hover{
    background-color: rgb(100, 71, 26);
}

/* main container css**************************** */
.main-container{
    border:5px solid green;
/*  task add  */
    min-height: 88vh;
    background-color: rgb(240,239,239);
    padding: 2rem;
    display: flex;
    /* Commnet below three lines(display, justify-content, align-items) If want to centre modal according to calc */
    /* display: flex;
    justify-content: space-evenly;
    align-items: center; */
}

.modal_container{
    /* Uncomment top and left if want to centre modal according calc function */
    position: absolute;
    top: 30vh;
    height: 18rem;
    width: 30rem;
    left: calc((100vw - 30rem)/2);
    /* display: flex; */
    display: none;
}

.modal_task_container{
    width: 75%;
}

.desc-box{
    height: 100%;
    width: 100%;
    padding: 2.2rem;
    font-size: 1.2rem;
    font-family: sans-serif;
    color: lightslategray;
    line-height: 120%;
}

.modal_filter-container{
    background-color: #444;
    width: 25%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding-top: 1.2rem;
    padding-bottom: 1.2rem;
}

.modal_filter{
    height: 12%;
    width: 60%;
}



.border{
    border: 2px solid white;
}


.ticket-container{
    height: 10rem;    
    width:15rem;
    background-color:white;
    
}
.ticket-color{
    height:8%;
}
.ticket_sub-container{
    padding-left:1rem;
    font-family: sans-serif;
}
.ticket-id{
    color:lightslategray;
}
.ticket-desc{
    text-align: center;
    height: 70%;  
}

